# docket

./: .editorconfig  .gitignore  LICENSE  README.md  focus.html  index.html  package-lock.json  package.json  panel.html  vite.config.ts  vitest.config.ts
docs/: README.md
docs/plans/: 2026-05-19-desktop-presence-design.md
docs/superpowers/plans/: 2026-05-11-docket.md
docs/superpowers/specs/: 2026-05-11-docket-design.md  (+3 more)
src/: App.test.ts  App.tsx  boot.ts  focus.tsx  index.tsx  panel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  opener.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_windows.rs  bindings_export.rs  db.rs  error.rs  lib.rs  models.rs  recurrence.rs  scheduler.rs  testing.rs  time.rs
src-tauri/src/commands/: analytics.rs  calendar.rs  categories.rs  desktop_panel.rs  focus.rs  mod.rs  reminders.rs  schedule.rs  settings.rs  stats.rs  subtasks.rs  tags.rs  tasks.rs
src-tauri/tests/: commands_integration.rs
src/bindings/: analytics.ts  calendar.ts  categories.ts  commands.ts  core.ts  focus.ts  generated.ts  invokeSeam.test.ts  notifications.ts  panel.ts  reminders.ts  schedule.ts  settings.ts  stats.ts  subtasks.ts  tags.ts  tasks.ts  types.ts
src/stores/: apiActions.ts  appChrome.ts  calendarUi.ts  filtersSort.ts  index.ts  install.ts  invalidate.test.ts  invalidate.ts  listActions.test.ts  listActions.ts  navigation.ts  resources.ts  taskFilters.test.ts  taskFilters.ts  theme.ts  toast.ts
src/styles/: global.css  panel-window.css
src/utils/: date.test.ts  date.ts  format.ts  themeSync.ts
(+41 files in other folders)
