[package]
name = "docket"
version = "0.1.0"
description = "A local-first, offline desktop task management application"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.88"
default-run = "docket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
ureq = { version = "2", features = ["json"] }
thiserror = "2"
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"

[[bin]]
name = "export-bindings"
path = "src/bin/export-bindings.rs"
required-features = []

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
